--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-000
+<!DOCTYPE html>
+<html lang="zh-TW">
+<head>
+  <meta charset="UTF-8" />
+  <title>Tetris</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <h1>🎮 俄羅斯方塊 Tetris</h1>
+  <canvas id="game" width="300" height="600"></canvas>
+  <p>
+    ⬅️ ➡️ 移動　
+    ⬆️ 旋轉　
+    ⬇️ 加速
+  </p>
+
+  <script src="script.js"></script>
+</body>
+</html>
+
